style: Remove overflow: hidden; property from body.root which prevented us from scrolling on the experiment collection page

--- a/frontend/src/scss/layout.scss
+++ b/frontend/src/scss/layout.scss
@@ -1,5 +1,4 @@
 body.root {
-    overflow: hidden;
     user-select: none;
     font-size: 16px;
     background-image: url("/public/images/background.jpg");
